# reprospan

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
.claude/skills/verify/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/web/: index.html
crates/reprospan-cli/: Cargo.toml
crates/reprospan-cli/src/: main.rs
crates/reprospan-core/: Cargo.toml
crates/reprospan-core/src/: lib.rs
crates/reprospan-server/: Cargo.toml
crates/reprospan-server/src/: lib.rs
crates/reprospan-store/: Cargo.toml
crates/reprospan-store/src/: lib.rs
docs/architecture/: bundle-format.md  overview.md  privacy-model.md  replay-semantics.md
examples/local-agent-capture/: README.md  package.json
examples/local-agent-capture/src/: agent.ts  local-tool.ts  main.ts
examples/local-agent-capture/test/: agent.test.mjs
examples/openai-agent/: package.json  tsconfig.json
examples/openai-agent/src/: agent.ts  local-tool.ts  main.ts
examples/openai-agent/test/: agent.test.mjs
