[workspace]
members = [
  "crates/reprospan-core",
  "crates/reprospan-store",
  "crates/reprospan-server",
  "crates/reprospan-cli",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
reprospan-core = { path = "crates/reprospan-core" }
reprospan-server = { path = "crates/reprospan-server" }
reprospan-store = { path = "crates/reprospan-store" }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
