[package]
name = "reprospan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
reprospan-core.workspace = true
reprospan-server.workspace = true
reprospan-store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
